--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
                                    
                                     <img src="images/portfolio/3.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="https://scorpidio11.github.io/Train-Scheduler/"
-                                                title="Train-Scheduler"> Train-Scheduler</a>
-                                            <a href="https://github.com/scorpidio11/Train-Scheduler" title="Train-Scheduler">
+                                        <h5 class="item-title"> <a href="https://scorpidio11.github.io/TriviaGame/"
+                                                title="Train-Scheduler"> Trivia Game </a>
+                                            <a href="https://github.com/scorpidio11/TriviaGame" title="TriviaGame">
                                                 GitHub <i class="fa fa-github"></i> </a></h5>
                                     </div>
                                   
