--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                             </div>
                             <div class="col-md-9 col-sm-9 col-xs-9 no-padding">
                                 <span class="text-regular text-uppercase color-white weight-black">PRINT design</span>
-                                <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
+                                <!-- <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
                                     industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                                    galley of type and scrambled it.</p>
+                                    galley of type and scrambled it.</p> -->
                             </div>
                         </div>
                         <!-- about item ends here -->
@@ -171,9 +171,9 @@
                             </div>
                             <div class="col-md-9 col-sm-9 col-xs-9 no-padding">
                                 <span class="text-regular text-uppercase color-white weight-black">WEB design</span>
-                                <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
+                                <!-- <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
                                     industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                                    galley of type and scrambled it.</p>
+                                    galley of type and scrambled it.</p> -->
                             </div>
                         </div>
                         <!-- about item ends here -->
@@ -184,9 +184,9 @@
                             </div>
                             <div class="col-md-9 col-sm-9 col-xs-9 no-padding">
                                 <span class="text-regular text-uppercase color-white weight-black">UI design</span>
-                                <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
+                                <!-- <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
                                     industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                                    galley of type and scrambled it.</p>
+                                    galley of type and scrambled it.</p> -->
                             </div>
                         </div>
                         <!-- about item ends here -->
@@ -197,9 +197,9 @@
                             </div>
                             <div class="col-md-9 col-sm-9 col-xs-9 no-padding">
                                 <span class="text-regular text-uppercase color-white weight-black"> CODING</span>
-                                <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
+                                <!-- <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
                                     industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                                    galley of type and scrambled it.</p>
+                                    galley of type and scrambled it.</p> -->
                             </div>
                         </div>
                         <!-- about item ends here -->
@@ -253,7 +253,9 @@
                                         <div class="info">
                                             <h5 class="item-title"> 
                                                 <a href="https://github.com/scorpidio11/liri-node-app" title="LIRI">
-                                                    GitHub <i class="fa fa-github"></i> </a></h5>
+                                                    GitHub <i class="fa fa-github"></i> </a>
+                                                    <a href="https://youtu.be/6N5VnKXMako" title="LIRI">
+                                                        Video <i class="fa fa-youtube"></i> </a></h5>
                                         </div>
                                         
                                     </li>
