--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <i class="fa fa-gears text-ultrabig mtop10"></i>
                             </div>
                             <div class="col-md-9 col-sm-9 col-xs-9 no-padding">
-                                <span class="text-regular text-uppercase color-white weight-black">PRINT design</span>
+                                <span class="text-regular text-uppercase color-white weight-black">PRINT | Package | Logo Design</span>
                                 <!-- <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
                                     industry's standard dummy text ever since the 1500s, when an unknown printer took a
                                     galley of type and scrambled it.</p> -->
@@ -170,7 +170,7 @@
                                 <i class="fa fa-desktop text-ultrabig mtop10"></i>
                             </div>
                             <div class="col-md-9 col-sm-9 col-xs-9 no-padding">
-                                <span class="text-regular text-uppercase color-white weight-black">WEB design</span>
+                                <span class="text-regular text-uppercase color-white weight-black">UI design</span>
                                 <!-- <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
                                     industry's standard dummy text ever since the 1500s, when an unknown printer took a
                                     galley of type and scrambled it.</p> -->
@@ -183,7 +183,7 @@
                                 <i class="fa fa-object-group text-ultrabig mtop10"></i>
                             </div>
                             <div class="col-md-9 col-sm-9 col-xs-9 no-padding">
-                                <span class="text-regular text-uppercase color-white weight-black">UI design</span>
+                                <span class="text-regular text-uppercase color-white weight-black">WED DESIGN</span>
                                 <!-- <p class="text-ultrasmall color-grey mtop10 text-italic">Lorem Ipsum has been the
                                     industry's standard dummy text ever since the 1500s, when an unknown printer took a
                                     galley of type and scrambled it.</p> -->
