--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                         <h5 class="item-title"> 
                                             <a href="https://github.com/scorpidio11/bamazon" title="LIRI">
                                                 GitHub <i class="fa fa-github"></i> </a>
-                                                <a href="https://youtu.be/6N5VnKXMako" title="LIRI">
+                                                <a href="https://drive.google.com/file/d/16jots5RNDYJO7eAXVpma4vOQbkT-ck3r/view" title="LIRI">
                                                     Video <i class="fa fa-youtube"></i> </a></h5>
                                     </div>
                                     
@@ -268,7 +268,7 @@
                                             <h5 class="item-title"> 
                                                 <a href="https://github.com/scorpidio11/liri-node-app" title="LIRI">
                                                     GitHub <i class="fa fa-github"></i> </a>
-                                                    <a href="https://youtu.be/6N5VnKXMako" title="LIRI">
+                                                    <a href="https://drive.google.com/open?id=1-Ry7Guj1J1MsQtOlU1xfWAfcPINZ_sCg" title="LIRI">
                                                         Video <i class="fa fa-youtube"></i> </a></h5>
                                         </div>
                                         
