--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
                                     <img src="images/portfolio/shinbay.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="https://www.shin-bay.com" title="shingbay">
+                                        <h5 class="item-title"> <a href="http://www.shin-bay.com" title="shingbay">
                                                 SHINBAY<br />WEB / BRAND DESIGN</a>
                                         </h5>
                                     </div>
