--- a/index.html
+++ b/index.html
@@ -463,14 +463,14 @@
                             </li>
                             <!-- portfolio item ends here -->
                                 <!-- portfolio item begins here -->
-                                <li class="all cmyk">
+                                <!-- <li class="all cmyk">
                                     <a href="images/portfolio/logo.jpg" title="logo">
                                         <img src="images/portfolio/logo_title.jpg" alt="" />
                                         <div class="info">
                                             <h5 class="item-title"><br/>Identifying with you</h5>
                                         </div>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- portfolio item ends here -->
                             </div>
                             </ul>
