--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <div class="gallery">
                         <div class="#">
                             <ul>
-                                <li class="all code">
+                                <!-- <li class="all code">
                                  
                                     <img src="images/portfolio/omakase.jpg" alt="" />
                                     <div class="info">
@@ -259,7 +259,7 @@
                                                     HEROKU <i class="fa fa-heroku"></i> </a></h5>
                                     </div>
                                     
-                                </li>
+                                </li> -->
 
                                  <!-- portfolio item begins here -->
 
