--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         </div>
                         <div class="col-md-12 col-xs-12">
                             <div class="clearfix">
-                                <h2 class="title text-lowercase  weight-bold color-yellow">Proficient<span class="color-white ">
+                                <h2 class="title  ">Proficient<span class="color-white ">
                                         in many design areas</span></h2>
                             </div>
                         </div>
@@ -554,35 +554,7 @@
         <div id="social-links">
             <div class="container text-center">
                 <div class="social-links-wrapper">
-                    <!-- social links item begins here -->
-                    <div class="col-md-4 col-sm-4 col-xs-6 social-item">
-                        <h5 class="weight-black text-uppercase color-black">Linkedin Profile</h5>
-                        <br>
-                        <a href="https://www.linkedin.com/in/mia-pak-59216512a/"
-                            target="_blank"><i class="fa fa-linkedin-square mtop20"></i></a>
-                    </div>
-                    <!-- social links item ends here -->
-                    <!-- social links item begins here -->
-                    <!-- <div class="col-md-4 col-sm-4 col-xs-6 social-item">
-                        <h5 class="weight-black text-uppercase color-black">Behance profile</h5>
-                        <br>
-                        <a href="#" target="_blank"><i class="fa fa-behance mtop20"></i></a>
-                    </div> -->
-                    <!-- social links item ends here -->
-                    <!-- social links item begins here -->
-                    <div class="col-md-4 col-sm-4 col-xs-6 social-item">
-                        <h5 class="weight-black text-uppercase color-black">Github profile</h5>
-                        <br>
-                        <a href="https://github.com/scorpidio11"
-                            target="_blank"><i class="fa fa-github mtop20"></i></a>
-                    </div>
-                    <!-- social links item ends here -->
-                    <!-- social links item begins here -->
-                    <!-- <div class="col-md-3 col-sm-3 col-xs-6 social-item">
-                     <h5 class="weight-black text-uppercase color-black">Twitter profile</h5>
-                     <br><i class="fa fa-long-arrow-right arrow-social"></i><a href="#" target="_blank"><i class="fa fa-twitter mtop20"></i></a>
-                  </div> -->
-                    <!-- social links item ends here -->
+      
                 </div>
             </div>
         </div>
