--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <div class="row marbottom30">
                 <div class="col-md-12 footer-content">
                     <p class="copyright color-black text-ultrasmall weight-bold text-uppercase mtop100">ALL RIGHTS
-                        RESERVED - © 2018 Mias Design Studio
+                        RESERVED - © 2018 Mia's Design Studio
                         <span class="pull-right"> find me on /
                             <a href="https://www.linkedin.com/in/mia-pak-59216512a/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                             /
