--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
                                     <img src="images/portfolio/follinique.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="https://www.myfollinique.com/sc/public/index.php"
+                                        <h5 class="item-title"> <a href="https://www.follinique.com/index.php"
                                                 title="FOLLINIQUE">
                                                 FOLLINIQUE</a>
                                                 <!-- <br />WEB / BRAND DESIGN -->
@@ -285,7 +285,7 @@
                                  
                                     <img src="images/portfolio/intel.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="http://www.intelleral.com/" title="Intelleral">
+                                        <h5 class="item-title"> <a href="#" title="Intelleral">
                                                 INTELLERAL<br /></a>
                                                 <p class="text-ultrasmall2">A Cognitive Supplement where I was in charge of Product design, brand naming, logo, packaging, and web design.
                                                 </p>
@@ -303,7 +303,7 @@
 
                                     <img src="images/portfolio/andro.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="https://www.androdrox.com/trial/step1/" title="ANDRODROX">
+                                        <h5 class="item-title"> <a href="#" title="ANDRODROX">
                                                 ANDRODROX<br />WEB / BRAND DESIGN</a>
                                         </h5>
                                     </div>
