--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                  
                                     <img src="images/portfolio/intel.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="intell/index.php" title="Intelleral">
+                                        <h5 class="item-title"> <a href="#" title="Intelleral">
                                                 INTELLERAL<br /></a>
                                                 <p class="text-ultrasmall2">A Cognitive Supplement where I was in charge of Product design, brand naming, logo, packaging, and web design.
                                                 </p>
