--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
                                     <img src="images/portfolio/follinique.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="https://www.follinique.com/index.php"
+                                        <h5 class="item-title"> <a href="https://www.follinique.com/"
                                                 title="FOLLINIQUE">
                                                 FOLLINIQUE</a>
                                                 <!-- <br />WEB / BRAND DESIGN -->
