--- a/index copy.html
+++ b/index copy.html
@@ -469,7 +469,7 @@
 
                                     <img src="images/portfolio/shinbay.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="http://www.shin-bay.com" title="shingbay">
+                                        <h5 class="item-title"> <a href="http://www.shin-bay.com/index2.html" title="shingbay">
                                                 SHINBAY<br />WEB / BRAND DESIGN</a>
                                         </h5>
                                     </div>
