--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
                                     <img src="images/portfolio/follinique.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="http://www.shin-bay.com/Mia/sc/public/index.php"
+                                        <h5 class="item-title"> <a href="http://www.shin-bay.com/sc/public/index.php"
                                                 title="FOLLINIQUE" target="_blank">
                                                 FOLLINIQUE</a>
                                                 <!-- <br />WEB / BRAND DESIGN -->
