--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                     <img src="images/portfolio/email.jpg" alt="" />
                                     <div class="info">
                                         <h5 class="item-title"> <a href="email.html" title="PDFulfillment" target="_blank">
-                                                William Lyon Signature Home<br />Design / HTML CSS</a>
+                                                William Lyon Signature Home<br />Email Design / HTML CSS</a>
                                         </h5>
                                     </div>
                                 
