--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                
                                     <img src="images/portfolio/nori.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="http://noriaz.com/phoenix.html" title="NORI SUSHI" target="_blank">
+                                        <h5 class="item-title"> <a href="http://noriaz.com/scottsdale.html" title="NORI SUSHI" target="_blank">
                                                 NORI ASIAN KITCHEN<br /></a> 
                                          
                                                <p class="text-ultrasmall2">I created their brand identity including logo, style guide for uniform, custom menus and all print/digital advertorial assets and email campaign design.
