--- a/banner.html
+++ b/banner.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .responsive {
+  width: 100%;
+  height: auto;
+}
+    </style>
 </head>
 <body>
-    <embed src="images/portfolio/banner_main.pdf" width="1200px" height="900px" />
+
+    <div class="responsive">
+    <img src="images/portfolio/banner_main.jpg"  class="responsive">
+</div>
 </body>
 </html>
