--- a/banner.html
+++ b/banner.html
@@ -6,15 +6,18 @@
     <title>Document</title>
     <style>
         .responsive {
-  width: 100%;
+            width: 100%;
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
     </style>
 </head>
 <body>
 
     <div class="responsive">
-    <img src="images/portfolio/banner_main.jpg"  class="responsive">
+    <img src="images/portfolio/banner_main.jpg" style="max-width: 1000px;" class="responsive">
 </div>
 </body>
 </html>
