--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                     <div class="info">
                                         <h5 class="item-title"> <a href="http://www.shin-bay.com/index2.html" title="shingbay" target="_blank">
                                                 SHINBAY<br /></a>
-                                                <p class="text-ultrasmall2 color-grey ">Shinbay opened in 2019 in Scottsdale AZ. I was tasked to Brand their identity, including logo, printing, sign design, web design and developed a digital menu app with React.
+                                                <p class="text-ultrasmall2 color-grey ">Shinbay opened in 2019 in Scottsdale AZ. I was tasked to brand their identity, including logo, printing, sign design, web design and developed a digital menu app with React.
                                                 </p>
                                         </h5>
                                     </div>
