--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </li>
 
                     <li>
-                        <a href="#portfolio">CODE
+                        <a href="#portfolio">CODE 
                         </a>
                     </li>
 
@@ -236,7 +236,7 @@
 
                                     <img src="images/portfolio/shinbay.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="http://www.shin-bay.com/index2.html" title="shingbay" target="_blank">
+                                        <h5 class="item-title"> <a href="http://www.shin-bay.com/" title="shingbay" target="_blank">
                                                 SHINBAY<br /></a>
                                                 <p class="text-ultrasmall2 color-grey ">Shinbay opened in 2019 in Scottsdale AZ. I was tasked to Brand their identity, including logo, printing, sign design, web design and developed a digital menu app with React.
                                                 </p>
@@ -250,7 +250,7 @@
                                
                                     <img src="images/portfolio/nori.jpg" alt="" />
                                     <div class="info">
-                                        <h5 class="item-title"> <a href="http://noriaz.com/phoenix.html" title="NORI SUSHI" target="_blank">
+                                        <h5 class="item-title"> <a href="http://noriaz.com/" title="NORI SUSHI" target="_blank">
                                                 NORI ASIAN KITCHEN<br /></a> 
                                          
                                                <p class="text-ultrasmall2">I created their brand identity including logo, style guide for uniform, custom menus and all print/digital advertorial assets and email campaign design.
