--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                     <img src="images/portfolio/email.jpg" alt="" />
                                     <div class="info">
                                         <h5 class="item-title"> <a href="email.html" title="Email" target="_blank">
-                                                William Lyon Signature <br />Email Design & Dev</a>
+                                                William Lyon Signature <br />Dev & Design</a>
                                         </h5>
                                     </div>
                                 
@@ -348,7 +348,7 @@
                                     <img src="images/portfolio/email2.jpg" alt="" />
                                     <div class="info">
                                         <h5 class="item-title"> <a href="email2.html" title="Email" target="_blank">
-                                               Taylor Morrison<br />Master Template 2021 Dev & Design</a>
+                                               Taylor Morrison<br />Master Template 2021 DEV & Design</a>
                                         </h5>
                                     </div>
                                 
