--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <button class="btn fil-cat color-black target mtop10" data-rel="cmyk">CMYK</button>
                         <button class="btn fil-cat color-black target mtop10" data-rel="code">CODE / APP</button>
 
-                        <!-- <button class="btn fil-cat color-black target mtop10" data-rel="ui">EMAIL</button> -->
+                        <button class="btn fil-cat color-black target mtop10" data-rel="email">EMAIL</button>
 
                     </div>
                 </div>
@@ -329,7 +329,7 @@
 
 
                                 <!-- portfolio item begins here -->
-                                <li class="all rgb">
+                                <li class="all rgb email">
                                  
                                     <img src="images/portfolio/email.jpg" alt="" />
                                     <div class="info">
@@ -343,7 +343,7 @@
 
 
                                 <!-- portfolio item begins here -->
-                                <li class="all rgb">
+                                <li class="all rgb email">
                                  
                                     <img src="images/portfolio/email2.jpg" alt="" />
                                     <div class="info">
