--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                                             <a href="images/portfolio/logo.jpg" title="logo">
                                                 <img src="images/portfolio/logo_title.jpg" alt="" />
                                                 <div class="info">
-                                                    <h5 class="item-title">Logo Design</h5>
+                                                    <h5 class="item-title"><br>Logo Design</h5>
                                                 </div>
                                             </a>
                                         </li>
