--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                     <img src="images/portfolio/email2.jpg" alt="" />
                                     <div class="info">
                                         <h5 class="item-title"> <a href="email2.html" title="Email" target="_blank">
-                                        Taylor Morrison Email Master Template 2021 Dev & Design </a>
+                                        Taylor Morrison Email Master Template 2021 Dev </a>
                                         </h5>
                                     </div>
                                 
